# domains-backend

./: Cargo.toml  nvim
src/: main.rs
src/db/: mod.rs
src/db/repositories/models/: domain.rs
src/db/repositories/sqlx_postgresql/: sqlx_postgresql_repository.rs
src/db/traits/: mod.rs  repository.rs
src/endpoints/: about.rs  domains.rs  mod.rs  search.rs
src/utils/: auto_complete.rs  mod.rs  trie.rs
