[package]
name = "domains"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
poem = "1.3.57"
poem-openapi = { version = "3.0.1", features = ["swagger-ui", "openapi-explorer"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
